--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^0.16.1
   firebase_storage: ^3.1.6
   shared_preferences: ^0.5.7+3
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
