--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,9 @@ dependencies:
   cloud_firestore: ^0.13.6
   firebase_auth: ^0.16.1
   firebase_storage: ^3.1.6
-  shared_preferences: ^0.5.7+3
   intl: ^0.16.1
   image_picker: ^0.6.7+2
+  path: ^1.7.0
 
 dev_dependencies:
   flutter_test:
