--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   intl: ^0.16.1
   image_picker: ^0.6.7+2
   path: ^1.7.0
+  firebase_core: ^0.4.5
 
 dev_dependencies:
   flutter_test:
