--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^0.6.7+2
   path: ^1.7.0
   firebase_core: ^0.4.5
+  table_calendar: ^2.2.3
 
 dev_dependencies:
   flutter_test:
