--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   path: ^1.6.4
   firebase_core: ^0.4.5
   table_calendar: ^2.2.3
+  url_launcher: ^5.5.0
 
 dev_dependencies:
   flutter_test:
